--- a/app.json
+++ b/app.json
@@ -14,7 +14,8 @@
     "pages/train/video",
     "pages/rules/index",
     "pages/exam/index",
-    "pages/login/index"
+    "pages/login/index",
+    "pages/connection/cardDetail"
   ],
   "window": {
     "backgroundTextStyle": "light",
