新增我的收藏

--- a/app.json
+++ b/app.json
@@ -19,7 +19,9 @@
     "pages/msg/detail",
     "pages/map/index",
     "pages/map/detail",
-    "pages/me/setting"
+    "pages/me/setting",
+    "pages/me/mycase" ,
+    "pages/me/mycollect"
   ],
   "window": {
     "backgroundTextStyle": "light",
